Agregue icono en la pestaña de la pagina

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
      rel="stylesheet" 
      />
      <!--hoja de estilos--> 
+     
 
      <link rel="stylesheet" href="style.css">
+     <link href="assets/Pinterest_Icon.webp" rel="icon">
+     <link href="assets/Pinterest_Icon.webp" rel="apple-touch-icon">
+
+
     <title>Pinterest</title>
 </head>
 
